ped_is_despot/src/despot_multiple/err
mkdir -p bin build .deps
/home/h/haoyu/local/x86_64/gcc48/bin/g++ -O0 -g -std=c++0x -c -Wall -Wno-sign-compare  -I src src/problems/pedestrian_changelane/SFM.cpp -o build/SFM.o 
In file included from /home/h/haoyu/local/x86_64/gcc48/include/c++/bits/localefwd.h:40:0,
                 from /home/h/haoyu/local/x86_64/gcc48/include/c++/ios:41,
                 from /home/h/haoyu/local/x86_64/gcc48/include/c++/istream:38,
                 from /home/h/haoyu/local/x86_64/gcc48/include/c++/fstream:38,
                 from src/problems/pedestrian_changelane/map.h:5,
                 from src/problems/pedestrian_changelane/SFM.h:5,
                 from src/problems/pedestrian_changelane/SFM.cpp:1:
/home/h/haoyu/local/x86_64/gcc48/include/c++/x86_64-unknown-linux/bits/c++locale.h:52:23: error: ‘uselocale’ was not declared in this scope
   extern "C" __typeof(uselocale) __uselocale;
                       ^
/home/h/haoyu/local/x86_64/gcc48/include/c++/x86_64-unknown-linux/bits/c++locale.h:52:45: error: invalid type in declaration before ‘;’ token
   extern "C" __typeof(uselocale) __uselocale;
                                             ^
/home/h/haoyu/local/x86_64/gcc48/include/c++/x86_64-unknown-linux/bits/c++locale.h: In function ‘int std::__convert_from_v(__locale_struct* const&, char*, int, const char*, ...)’:
/home/h/haoyu/local/x86_64/gcc48/include/c++/x86_64-unknown-linux/bits/c++locale.h:75:53: error: ‘__gnu_cxx::__uselocale’ cannot be used as a function
     __c_locale __old = __gnu_cxx::__uselocale(__cloc);
                                                     ^
/home/h/haoyu/local/x86_64/gcc48/include/c++/x86_64-unknown-linux/bits/c++locale.h:100:33: error: ‘__gnu_cxx::__uselocale’ cannot be used as a function
     __gnu_cxx::__uselocale(__old);
                                 ^
In file included from src/problems/pedestrian_changelane/SFM.h:5:0,
                 from src/problems/pedestrian_changelane/SFM.cpp:1:
src/problems/pedestrian_changelane/map.h: In member function ‘void MyMap::InitGoalsBlank()’:
src/problems/pedestrian_changelane/map.h:226:7: warning: unused variable ‘delta’ [-Wunused-variable]
   int delta=ModelParams::rln*7;
       ^
src/problems/pedestrian_changelane/map.h:227:7: warning: unused variable ‘ct’ [-Wunused-variable]
   int ct=0;
       ^
src/problems/pedestrian_changelane/map.h:228:7: warning: unused variable ‘x1’ [-Wunused-variable]
   int x1=ModelParams::rln,x2=ModelParams::rln*10;
       ^
src/problems/pedestrian_changelane/map.h:228:27: warning: unused variable ‘x2’ [-Wunused-variable]
   int x1=ModelParams::rln,x2=ModelParams::rln*10;
                           ^
src/problems/pedestrian_changelane/SFM.cpp: In member function ‘MyVector SFM::PedToPed(Pedestrian&, std::vector<Pedestrian>&)’:
src/problems/pedestrian_changelane/SFM.cpp:36:13: warning: suggest parentheses around comparison in operand of ‘&’ [-Wparentheses]
   if(goal_w1==goal_w2&goal_h1==goal_h2) //pedestrian already reach the goal, 
             ^
src/problems/pedestrian_changelane/SFM.cpp: In member function ‘double SFM::ModelTransProb(PedestrianState, PedestrianState)’:
src/problems/pedestrian_changelane/SFM.cpp:433:10: warning: unused variable ‘sum’ [-Wunused-variable]
   double sum=0;
          ^
make: *** [build/SFM.o] Error 1
